--- a/src/scss/project-card.scss
+++ b/src/scss/project-card.scss
@@ -27,9 +27,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-//   height: 100%;
-  padding-top: 3%;
-  height: 95vh;
+  height: 100vh;
 }
 
 
@@ -37,7 +35,7 @@
 .project-screen {
   width: 100%;
   flex: 1;
-  padding: 24px 48px;
+  padding: 100px 48px 24px 48px; // Extra top padding to account for navbar
   display: flex;
   flex-direction: column;
 }
